fix: spacing in audio container

--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -135,7 +135,7 @@ button:focus-visible {
 
 .transcription-container {
   font-size: 14px;
-  color: #ffffff;
+  color: #a5aaff;
   max-height: 300px; /* Set the desired maximum height */
   overflow: auto;
   text-align: left;
@@ -143,7 +143,7 @@ button:focus-visible {
 
 .summary-container {
   font-size: 14px;
-  color: #a5aaff;
+  color: #ffffff;
   max-height: 300px; /* Set the desired maximum height */
   overflow: auto;
   text-align: left;
@@ -154,4 +154,8 @@ button:focus-visible {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.audio-container {
+  margin-bottom: 20px;
 }
